# alamesa

./: .dockerignore  .env.example  .gitignore  .vibeforge-gate  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: _checks.yml  cd.yml  ci.yml  deploy.yml  pr.yml
.vibeforge/: stack.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_is_active_to_restaurant_users.py  0003_add_is_active_to_restaurants_and_last_seen_at_to_diners.py  0004_add_is_active_to_tables_and_snapshot_name_to_order_items.py  0005_add_confirmed_at_to_orders.py  0005_add_first_qr_generated_at_to_restaurants.py  0006_add_confirmed_at_to_orders.py  0006_add_preparing_ready_closed_at_to_orders.py  0007_add_cancelled_at_to_orders.py  0008_add_preparing_ready_closed_at_to_orders.py
deploy/: .env.example  README.md
diner-app/: index.html
diner-app/src/: App.tsx
frontend/: package.json  tsconfig.json
frontend/diner-app/: index.html  package.json  vite.config.ts
frontend/diner-app/src/: App.tsx  main.tsx  sentry.ts  types.ts
frontend/ops-dashboard/: index.html  package.json  vite.config.ts
frontend/ops-dashboard/src/: App.tsx  main.tsx  types.ts
frontend/src/: main.ts
nginx/: default.conf
scripts/: check_type_mirror.sh  demo.sh  deploy.sh  seed.py
shared/: contracts.py
tests/: conftest.py  test_api.py  test_auth_login.py  test_categories.py  test_contracts.py  test_diner_register_public.py  test_menu_items.py  test_migration.py  test_nginx_cache.py  test_order_confirm.py  test_orders.py  test_orders_cancel.py  test_orders_close.py  test_orders_confirm.py  test_orders_lifecycle.py  test_orders_mark_ready.py  test_orders_read.py  test_orders_sse.py  test_orders_start_preparing.py  test_orders_stream.py  test_package.py  test_public_restaurant_menu.py  test_public_table.py  test_restaurant_users.py  test_seed.py  test_tables.py
tests/unit/: test_app_factory.py  test_contracts.py  test_middleware.py  test_models.py  test_schemas.py  test_security.py  test_settings.py  test_store.py
(+54 files in other folders)
