[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesadigital"
version = "0.1.0"
description = "Mesa Digital API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "sqlalchemy[mypy]>=2.0.0",
]

[project.scripts]
mesadigital-api = "mesadigital.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesadigital"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
