[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesadigital"
version = "0.1.0"
description = "Mesa Digital API"
requires-python = ">=3.11"
dependencies = [
    # Pineadas a versiones exactas (reproducibilidad): el worker y el CI instalan
    # LO MISMO, evitando el drift que rompía main sin tocar el código.
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    "pydantic==2.10.4",
    "pydantic-settings==2.14.1",
    "bcrypt==5.0.0",
    "PyJWT==2.13.0",
    "sentry-sdk==2.63.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "black==26.5.1",
    "ruff==0.15.17",
    "mypy==2.1.0",
    "sqlalchemy[mypy]==2.0.50",
    "psycopg2-binary==2.9.12",
]

[project.scripts]
mesadigital-api = "mesadigital.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesadigital", "shared"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
